[package]
name = "miniml"
version = "0.1.0"
authors = ["Kári Frederiksen <karifrederiksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "prelude" }
ast = { path = "ast" }
parser = { path = "parser" }
interpreter = { path = "interpreter" }
type_recon = { path = "type_recon" }
lexer = { path = "lexer" }
