[package]
name = "miniml"
version = "0.1.0"
authors = ["Kári Frederiksen <karifrederiksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "prelude" }
ast = { path = "ast" }
parser_v2 = { path = "parser_v2" }
type_recon = { path = "type_recon" }
js_backend = { path = "js_backend" }
